monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/A0821.java
public const1(int i, boolean b){}