monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0821/A0821.java
public const1(int i, boolean i) {}
